[package]
name = "httpproxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
